# latex-jats

./: .dockerignore  .env.dev.example  .env.example  .gitignore  CLAUDE.md  README.md  author_guide.md  author_guide_qmd.md  biblatex.sty.ltxml  ccr.cls.ltxml  ccr_latex.lua  check_zip.py  convert.py  deploy-preview.sh  docker-compose.yml  fixbib.py  ingenta-jats.xml  issues.md  package-lock.json  package.json  pyproject.toml  quarto.md  textools.lua  todo.md  website-design.md
.github/workflows/: release.yml  sync-ccr-extension.yml  tests.yml
CCR2025.1.2.YAO_gold/: CCR2025.1.2.YAO.xml
deploy/: .env.example  docker-compose.build.yml  docker-compose.yml  update.sh
examples/CCR2023.1.004.KATH/: bibliography.bib  ccr.cls  main.bbl  main.bcf  main.blg  main.tex
examples/CCR2023.1.004.KATH/latex/: main.aux  main.blg  main.run.xml
examples/CCR2025.1.2.YAO/: bibliography.bib  body.tex  main.bbl  main.bcf  main.blg  tab1.tex  tab2_robust.tex
examples/CCR2025.1.2.YAO/latex/: appendices.tex  main.aux  main.blg  main.tex  tab1_robust.tex  tab5.tex
examples/CCR2025_1_14_MULL/: Makefile  README.md  bibliography.bib  body.tex  main.aux  main.bbl  main.bcf  main.blg  main.tex
examples/CCR2026.1.2.ELDA/tables/: tableA1.tex
src/css/: jats-preview.css
src/jatsmith/: ccr_cls.py  check_zip.py  convert.py  fix_input.py  prepare_source.py  quarto.py  runner.py
src/latex_jats/: ccr_cls.py  convert.py  fix_input.py  fixbib.py  prepare_source.py  quarto.py  runner.py
src/latexml/: adjustbox.sty.ltxml  arabtex.sty.ltxml  biblatex.sty.ltxml  booktabs.sty.ltxml  ccr.cls.ltxml  cjhebrew.sty.ltxml  fontspec.sty.ltxml  longtable.sty.ltxml  luainputenc.sty.ltxml  tabu.sty.ltxml  threeparttable.sty.ltxml  threeparttablex.sty.ltxml
src/lua/: ccr_latex.lua
src/xslt/: jats-html-wrapper.xsl  latexml-jats-wrapper.xsl
src/xslt/main/: jats-html.xsl
tests/: conftest.py  test_auth.py  test_ccr_cls.py  test_clean_body.py  test_collapse_affiliations.py  test_compare_metadata.py  test_dedupe_ref_lists.py  test_fix_appendix_labels.py  test_fix_disp_formula.py  test_fix_ext_links.py  test_fix_fig_structure.py  test_fix_footnotes.py  test_fix_graphic_in_td.py  test_fix_input.py  test_fix_listing_data.py  test_fix_nested_p.py  test_fix_references.py  test_fix_supplementary_material.py  test_fix_table_notes.py  test_fix_xref_ref_types.py  test_flatten_raster_alpha.py  test_inject_metadata.py  test_inject_qmd_metadata.py  test_integration.py  test_metadata.py  test_normalize_mathml_chars.py  test_ojs_client.py  test_ojs_parse.py  test_prepare_source.py  test_quarto_fixups.py  test_strip_mathml_alttext.py  test_upstream.py  test_warn_fig_paragraphs.py  test_warn_multirow.py  test_warn_section_acknowledgements.py  test_warn_text_in_figure.py  test_warn_tfoot.py  test_web_api.py  test_worker.py
tests/fixtures/latex/: adjustbox_table.tex  authors.tex  ccr.cls  citations.bbl  citations.tex  description.tex  subfigure.tex  supplementary.tex  threeparttable.tex
tests/fixtures/latex/CCR2025.1.2.YAO/: body.tex  tab2.tex  tab2_robust_face.tex  tab3.tex  tab4.tex
web/backend/: Dockerfile  Dockerfile.base  alembic.ini
web/backend/alembic/: env.py
web/backend/alembic/versions/: 0001_baseline.py  0002_add_subtitle.py  0003_fix_source.py  (+11 more)
web/backend/app/: config.py  deps.py  email.py  main.py  models.py  ojs.py  orcid.py  presign.py  storage.py  upstream.py  worker.py
web/frontend/: Caddyfile  Dockerfile  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
web/frontend/src/: App.tsx  index.css  main.tsx
(+36 files in other folders)
