[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "latex-jats"
version = "0.7.3"
description = "Convert CCR journal LaTeX manuscripts to JATS XML"
requires-python = ">=3.10"
dependencies = ["lxml", "pyyaml", "Pillow"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
latex_jats = ["ccr_canonical_extension/**/*"]

[project.optional-dependencies]
test = ["pytest", "httpx", "respx", "aiosmtpd"]
web = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "sqlmodel>=0.0.18",
    "alembic>=1.13",
    "python-multipart>=0.0.9",
    "httpx>=0.27",
    "markdown>=3.6",
    "cryptography>=42",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = ["integration: requires latexmlc installed (deselect with -m 'not integration')"]

[project.scripts]
latex-jats = "latex_jats.convert:main"
fixbib = "latex_jats.fixbib:main"
fix-input = "latex_jats.fix_input:main"
prepare-source = "latex_jats.prepare_source:main"
run-examples = "latex_jats.runner:main"
check-zip = "latex_jats.check_zip:main"

[tool.basedpyright]
typeCheckingMode = "basic"

[dependency-groups]
test = [
    "anyio>=4.13.0",
]
